Scrollbars: disabled "pointer-events: none" while dragging, as it can cause issues

--- a/src/widgets/scrollbars/scrollbars.scss
+++ b/src/widgets/scrollbars/scrollbars.scss
@@ -211,14 +211,16 @@
 
   /* IS DRAGGING */
 
-  &.is-horizontal-dragging,
-  &.is-vertical-dragging {
+  // Disabled, because otherwise elements inside it can't be found with document.elementAtPoint
 
-    > .scrollbars-viewport {
-      pointer-events: none;
-    }
+  // &.is-horizontal-dragging,
+  // &.is-vertical-dragging {
 
-  }
+    // > .scrollbars-viewport {
+    //   pointer-events: none;
+    // }
+
+  // }
 
   /* IS DRAGGING HORIZONTAL */
 
